--- a/index.html
+++ b/index.html
@@ -30,18 +30,13 @@ header{
   padding:20px 0 10px;
   background:linear-gradient(180deg,rgba(212,175,55,.12),transparent);
   box-shadow:0 3px 15px rgba(0,0,0,.4);
-  flex-shrink:0;
 }
 header h1{
   font-family:'Playfair Display',serif;
   font-size:2rem;
   color:var(--gold);
-  text-shadow:0 0 12px rgba(212,175,55,.4);
 }
-header p{
-  font-size:1rem;
-  color:var(--muted);
-}
+header p{color:var(--muted);font-size:1rem}
 
 /* CALENDÁRIO */
 .calendar{
@@ -49,118 +44,58 @@ header p{
   display:flex;
   flex-direction:column;
   padding:20px 40px;
-  height:calc(100vh - 110px);
   overflow-y:auto;
 }
 .calendar-header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  margin-bottom:25px;
+  display:flex;justify-content:space-between;align-items:center;margin-bottom:25px;
 }
 .calendar-header h2{
   font-family:'Playfair Display',serif;
   color:var(--gold);
-  font-size:1.9rem;
-  text-align:center;
+  font-size:1.8rem;
 }
 .calendar-header button{
-  background:none;
-  border:none;
-  color:var(--gold);
-  font-size:2rem;
-  cursor:pointer;
-  transition:.2s;
+  background:none;border:none;color:var(--gold);font-size:2rem;cursor:pointer;transition:.2s;
 }
-.calendar-header button:hover{
-  transform:scale(1.25);
-  color:var(--accent);
-}
+.calendar-header button:hover{transform:scale(1.25);color:var(--accent);}
 
 /* GRID */
-.weekdays,.days{
-  display:grid;
-  grid-template-columns:repeat(7,1fr);
-  gap:14px;
-  text-align:center;
-}
-.weekdays div{
-  color:var(--muted);
-  font-weight:600;
-  text-transform:uppercase;
-  font-size:.85rem;
-}
+.weekdays,.days{display:grid;grid-template-columns:repeat(7,1fr);gap:14px;text-align:center;}
+.weekdays div{color:var(--muted);font-weight:600;text-transform:uppercase;font-size:.85rem;}
 .day{
   background:var(--card);
   border:1px solid rgba(255,255,255,.05);
   border-radius:var(--radius);
-  min-height:130px;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:flex-start;
-  padding:10px;
-  transition:all .25s;
-  cursor:pointer;
-  position:relative;
-  user-select:none;
+  min-height:120px;
+  display:flex;flex-direction:column;align-items:center;justify-content:flex-start;
+  padding:10px;transition:all .25s;cursor:pointer;position:relative;
 }
-.day .num{
-  font-weight:700;
-  font-size:1.4rem;
-  margin-bottom:6px;
-}
+.day:hover{transform:translateY(-3px);border-color:var(--gold);box-shadow:0 0 20px rgba(212,175,55,.25);}
+.day .num{font-weight:700;font-size:1.4rem;margin-bottom:6px;}
 .day.reservado{
-  background:#fff;
-  color:#000;
-  animation:pulse 1.8s infinite;
-  font-weight:600;
+  background:#fff;color:#000;font-weight:600;animation:pulse 1.8s infinite;
 }
-.day.reservado .nomes{
-  margin-top:4px;
-  font-size:.8rem;
-  line-height:1.1rem;
-  color:#000;
-  font-weight:500;
-  text-align:center;
-  word-break:break-word;
-}
+.day.reservado .nomes{margin-top:4px;font-size:.8rem;line-height:1.1rem;color:#000;font-weight:500;text-align:center;}
 @keyframes pulse{
   0%{box-shadow:0 0 0 rgba(255,255,255,.3);}
   50%{box-shadow:0 0 20px rgba(255,255,255,.7);}
   100%{box-shadow:0 0 0 rgba(255,255,255,.3);}
 }
-.day:hover{
-  transform:translateY(-3px);
-  box-shadow:0 0 25px rgba(212,175,55,.25);
-  border-color:var(--gold);
-}
-.day.disabled{opacity:.2;pointer-events:none}
 
 /* MODAL */
 #modal{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.8);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:99;
-  padding:20px;
+  position:fixed;inset:0;background:rgba(0,0,0,.8);
+  display:none;align-items:center;justify-content:center;z-index:99;padding:20px;
 }
 #modal.show{display:flex;animation:fadeIn .3s ease}
+@keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
 .modal-content{
   background:var(--card);
   border:1px solid var(--gold);
   border-radius:var(--radius);
-  padding:25px 35px;
-  width:90%;
-  max-width:800px;
-  max-height:85vh;
-  overflow-y:auto;
+  padding:25px 35px;width:90%;max-width:800px;max-height:85vh;overflow-y:auto;
   box-shadow:0 0 60px rgba(212,175,55,.25);
 }
-@keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
 .modal-content h3{
   text-align:center;
   color:var(--gold);
@@ -180,77 +115,38 @@ header p{
 }
 .reserva-item strong{color:var(--gold);font-size:1.1rem;}
 .reserva-item span{display:block;margin-top:6px;font-size:.95rem;color:var(--muted);}
-.reserva-item .criado{
-  color:var(--gold);
-  font-size:.85rem;
-  margin-top:8px;
-  font-style:italic;
-}
+.reserva-item .criado{color:var(--gold);font-size:.85rem;margin-top:8px;font-style:italic;}
 .btn-whats{
   display:inline-block;
   background:linear-gradient(90deg,#25D366,#128C7E);
-  color:#fff;
-  text-decoration:none;
-  padding:8px 14px;
-  border-radius:8px;
-  font-weight:600;
-  margin-top:10px;
-  transition:all .2s;
-  font-size:.9rem;
+  color:#fff;text-decoration:none;padding:8px 14px;
+  border-radius:8px;font-weight:600;margin-top:10px;transition:.2s;font-size:.9rem;
 }
 .btn-whats:hover{opacity:.9;transform:scale(1.03);}
 .close-btn{
-  display:block;
-  margin:18px auto 0;
-  background:none;
-  border:1px solid var(--muted);
-  color:var(--muted);
-  border-radius:10px;
-  padding:8px 18px;
-  cursor:pointer;
-  transition:.3s;
+  display:block;margin:18px auto 0;background:none;
+  border:1px solid var(--muted);color:var(--muted);
+  border-radius:10px;padding:8px 18px;cursor:pointer;transition:.3s;
 }
-.close-btn:hover{
-  color:var(--gold);
-  border-color:var(--gold);
-}
-
-/* LOADER */
+.close-btn:hover{color:var(--gold);border-color:var(--gold);}
 #overlay{
-  position:fixed;
-  inset:0;
-  background:rgba(11,15,25,.95);
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  color:var(--gold);
-  font-family:'Playfair Display',serif;
-  font-size:1.4rem;
-  z-index:999;
+  position:fixed;inset:0;background:rgba(11,15,25,.95);
+  display:flex;flex-direction:column;align-items:center;justify-content:center;
+  color:var(--gold);font-family:'Playfair Display',serif;font-size:1.4rem;z-index:999;
 }
 .loader{
-  border:5px solid rgba(255,255,255,.1);
-  border-top:5px solid var(--gold);
-  border-radius:50%;
-  width:60px;
-  height:60px;
-  animation:spin 1s linear infinite;
-  margin-bottom:20px;
+  border:5px solid rgba(255,255,255,.1);border-top:5px solid var(--gold);
+  border-radius:50%;width:60px;height:60px;animation:spin 1s linear infinite;margin-bottom:20px;
 }
 @keyframes spin{to{transform:rotate(360deg)}}
 
 /* RESPONSIVO */
 @media(max-width:900px){
-  header h1{font-size:1.6rem;}
-  .calendar{padding:10px 15px;}
-  .day{min-height:90px;font-size:1rem;border-radius:14px;}
+  .calendar{padding:10px;}
+  .day{min-height:90px;font-size:1rem;}
   .day .num{font-size:1.2rem;}
-  .weekdays div{font-size:.75rem;}
-  .modal-content{width:95%;padding:20px;max-height:90vh;}
-  .reserva-item{padding:12px;}
-  .btn-whats{font-size:.85rem;padding:6px 10px;}
-  .calendar-header h2{font-size:1.4rem;}
+  .modal-content{width:95%;padding:20px;}
+  .btn-whats{font-size:.85rem;}
 }
 </style>
 </head>
@@ -318,8 +214,8 @@ function renderCalendar(){
   const names=["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"];
   monthYear.textContent=`${names[m]} ${y}`;
   daysContainer.innerHTML="";
-
   const start=first.getDay();
+
   for(let i=0;i<start;i++){
     const empty=document.createElement("div");
     empty.classList.add("day","disabled");
@@ -350,12 +246,11 @@ function abrirModal(data,list){
   reservasList.innerHTML="";
   list.forEach(r=>{
     const tel=r.contato?.replace(/\D/g,"");
-    const criacao=r.criadoEm?formatarDataHora(r.criadoEm):null;
-    const horario=formatarHorario(r.horario);
+    const criacao=formatarDataHora(r.criadoEm||r.carimbo);
     reservasList.innerHTML+=`
       <div class='reserva-item'>
         <strong>${r.nome}</strong>
-        ${horario?`<span>🕒 Horário: ${horario}</span>`:""}
+        ${r.horario?`<span>🕒 Horário: ${r.horario}</span>`:""}
         ${r.pessoas?`<span>👥 ${r.pessoas} pessoa(s)</span>`:""}
         ${r.mesa?`<span>🍽️ Mesa: ${r.mesa}</span>`:""}
         ${r.status?`<span>Status: <b style="color:${r.status==="Pendente"?"#ef4444":"#22c55e"}">${r.status}</b></span>`:""}
@@ -367,23 +262,20 @@ function abrirModal(data,list){
 }
 closeModal.onclick=()=>modal.classList.remove("show");
 
-/* Formata apenas hora (HH:MM) */
-function formatarHorario(h){
-  if(!h) return "";
-  try{
-    const d=new Date(h);
-    if(!isNaN(d)) return d.toLocaleTimeString("pt-BR",{hour:"2-digit",minute:"2-digit"});
-  }catch(e){}
-  return h.replace(/(\d{1,2}):?(\d{2})?.*/,"$1:$2");
-}
-
 /* Formata data/hora da criação */
 function formatarDataHora(valor){
-  const dt=new Date(valor);
-  if(isNaN(dt))return "";
-  const dia=dt.toLocaleDateString("pt-BR",{day:"2-digit",month:"long",year:"numeric"});
-  const hora=dt.toLocaleTimeString("pt-BR",{hour:"2-digit",minute:"2-digit"});
-  return `${dia} às ${hora}`;
+  if(!valor)return"";
+  const d=new Date(valor);
+  if(!isNaN(d)){
+    const dia=d.toLocaleDateString("pt-BR",{day:"2-digit",month:"long",year:"numeric"});
+    const hora=d.toLocaleTimeString("pt-BR",{hour:"2-digit",minute:"2-digit"});
+    return `${dia} às ${hora}`;
+  }
+  const [data,hora]=valor.split(" ");
+  if(!data)return"";
+  const [ano,mes,dia]=data.split("-");
+  const meses=["janeiro","fevereiro","março","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"];
+  return `${dia} de ${meses[parseInt(mes)-1]} de ${ano} às ${hora?.slice(0,5)}`;
 }
 
 /* Navegação */
